@@ -1,3 +1,8 @@
+2010-09-18 Fred Kiefer <fredkiefer@gmx.de>
+
+	* Source/CFPropertyList.m (CFPropertyListCreateDeepCopy):
+	Implement deep copy.
+
 2010-06-22 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/CFRuntime.m: Use NSAllocateObject() instead of 
